# rust-sea-orm-axum-crud

./: .env.example  .gitignore  Cargo.toml  README  README.md
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  prelude.rs  task.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/controllers/: mod.rs  tasks_controller.rs
src/lib/: db.rs
src/routes/: mod.rs  tasks_routes.rs
