[package]
name = "crud-diesel-rust"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros"]}
serde = {version = "1.0.197", features = ["derive"]}
tokio = {version = "1.36.0", features = ["full"]}
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
